--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   dots_indicator: ^1.2.0
   swipedetector: ^1.2.0
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
